curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-curl-pod
spec:
  containers:
  - name: my-curl-container
    image: alicek106/ubuntu:curl
    command: ["tail"]
    args: ["-f", "/dev/null"]
