deployment-busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-busybox-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-busybox
  template:
    metadata:
      name: my-busybox-pod
      labels:
        app: my-busybox
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: ["tail"]
        args: ["-f", "/dev/null"]
