hostname-deploy-svc-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: my-webserver
      labels:
        app: webserver
    spec:
      containers:
      - name: my-webserver
        image: alicek106/rr-test:echo-hostname
#        livenessProbe:
#          failureThreshold: 3
#          httpGet:
#            path: /health
#            port: 80
#            scheme: HTTP
#          initialDelaySeconds: 60
#          periodSeconds: 60
#          successThreshold: 1
#          timeoutSeconds: 10
#        readinessProbe:
#          failureThreshold: 3
#          httpGet:
#            path: /health
#            port: 80
#            scheme: HTTP
#          initialDelaySeconds: 60
#          periodSeconds: 60
#          successThreshold: 1
#          timeoutSeconds: 10
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-service
spec:
  ports:
  - name: web-port
    port: 8080
    targetPort: 80
  selector:
    app: webserver
  type: NodePort
