hostname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-service
spec:
  ports:
  - name: web-port
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: webserver
  type: NodePort
