ingress-ziippy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ziippy
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: "gce"
spec:
  rules:
#  - host: k.ziippydomain.com
  - http:
      paths:
      - path: /echo-hostname
        backend:
          serviceName: hostname-service
          servicePort: 8080
